samples/_failures_safe/1761083060_a901a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7b0b36d.c: In function ‘matrix_subtract’:
./samples/SAFE/__tmp_a7b0b36d.c:165:9: error: expected expression at end of input
  165 |         result->data[i] =
      |         ^~~~~~
./samples/SAFE/__tmp_a7b0b36d.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a7b0b36d.c:165:9: error: expected declaration or statement at end of input
